Fix blur on safari

--- a/src/components/NavHeader/NavHeader.module.scss
+++ b/src/components/NavHeader/NavHeader.module.scss
@@ -10,6 +10,7 @@
   padding-top: 32px;
   background-color: var(--background-modal);
   z-index: var(--z-index-header);
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
 
   font-size: 16px;
